--- a/src/pages/Game/Game.module.css
+++ b/src/pages/Game/Game.module.css
@@ -1,8 +1,61 @@
 .container {
   text-align: center;
-  background-image: url('../../images/game-field.jpg');
-  background-size: cover;
-  background-position: center;
   height: 100vh;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  background-image: url('../../images/base-game-background.jpg');
+  background-size: contain;
+  background-position: center;
+  align-items: center;
+  /* filter: grayscale(80%); */
+}
+.playField {
+  /* text-align: center; */
+  justify-content: center;
+  background-image: url('../../images/game-field.jpg');
+  background-size: contain;
+  background-position: center;
+  filter: grayscale(20%);
+  /* height: 100vh; */
+}
+
+.exitButton {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+
+  background: transparent;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  z-index: 2;
+}
+.exitButton:hover {
+  transform: scale(1.1);
+}
+.verticalNavigationLeft {
+  position: absolute;
+  background: linear-gradient(to right, rgba(27, 27, 27), rgba(27, 27, 27, 0));
+  backdrop-filter: blur(10px);
+  left: 0;
+  width: 65px;
+  height: 100%;
+  opacity: 0.9;
+  z-index: 1;
+}
+.verticalNavigationRight {
+  position: absolute;
+  background: linear-gradient(
+    to left,
+    rgba(27, 27, 27, 0.8),
+    rgba(27, 27, 27, 0)
+  );
+  backdrop-filter: blur(10px);
+  right: 0;
+  width: 65px;
+  height: 100%;
+  opacity: 0.9;
+  z-index: 1;
 }
