--- a/src/pages/Game/Game.module.css
+++ b/src/pages/Game/Game.module.css
@@ -4,7 +4,7 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  background-image: url('../../images/base-game-background.jpg');
+  background-image: url("../../images/base-game-background.jpg");
   background-size: contain;
   background-position: center;
   align-items: center;
@@ -13,7 +13,7 @@
 .playField {
   /* text-align: center; */
   justify-content: center;
-  background-image: url('../../images/game-field.jpg');
+  background-image: url("../../images/game-field.jpg");
   background-size: contain;
   background-position: center;
   filter: grayscale(20%);
@@ -47,15 +47,18 @@
 }
 .verticalNavigationRight {
   position: absolute;
-  background: linear-gradient(
-    to left,
-    rgba(27, 27, 27, 0.8),
-    rgba(27, 27, 27, 0)
-  );
+  background: linear-gradient(to left, rgba(27, 27, 27, 0.8), rgba(27, 27, 27, 0));
   backdrop-filter: blur(10px);
   right: 0;
   width: 65px;
   height: 100%;
   opacity: 0.9;
   z-index: 1;
+}
+
+.customButton {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
 }
